@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-1608: pig should always include pig-default.properties and pig.properties in the pig.jar (nrai via daijy)
+
 OPTIMIZATIONS
 
 BUG FIXES
